Use the correct font at work. Change non-work email address. Change paren highlight color.

--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Remember to run
   git submodule update
 after cloning this repository.
 
-Justin Hipple <brokenreality@gmail.com>
+Justin Hipple <hipplej@flipchain.com>
